# Linux

./: .editorconfig  .gitattributes  .gitignore  README.md  Readme.md  Readme_os_version_history.md  Readme_tree_diagram_here.md  os_version_history.md
base-pc/: Readme-base-pc-debian.md  Readme_Manual_Setup.md  Readme_base-pc_debian.md  Readme_manual_setup.md
customize/: README.debinst_live.md  debian-live.sh  debian-lxde.sh  debian-setup.sh  debian_customize.sh  debinst.sh  debinst_live.sh  knoppix-live.8.2.sh  knoppix-live.sh  knoppix-setup.sh  live-custom.sh  ubuntu-live.sh  ubuntu-setup.sh  ubuntu_customize.sh
document/: memo_multi_iso.txt  memo_multi_iso_gpt.txt  memo_multi_iso_gpt_ntfs.txt  memo_multi_iso_tree.txt  mkinstallusbstick.sh  mkusb.sh
installer/: README.md  addusers.sh  addusers_txt_maker.sh  dist_remaster_dvd.sh  dist_remaster_mini.sh  dist_remaster_net.sh  install.sh  kickstart_centos.cfg  kickstart_centos8.cfg  kickstart_fedora.cfg  mk_initrd.sh  preseed_debian.cfg  preseed_debian_raid.cfg  preseed_glantank.cfg  preseed_ubuntu.cfg
installer-usbstick/: README.md  mkinstallusbstick.sh
laboratory/: Readme_mkosi_qemu.md  Readme_network_bridge.md  Readme_qemu_rootfs.md  settings.json
live/: README.md  debootstrap.sh
make usb device for install/: README.md  mk_usb4inst.sh
script/: Readme.md  Readme_1st_work_env.md  Readme_db_layout.md  Readme_develop_app_samba.md  Readme_develop_application_settings.md  Readme_develop_application_spec.md  Readme_develop_mkosi_tree_diagram.md  Readme_develop_spec_virtual-pc.md  Readme_develop_tree_diagram.md  Readme_develop_tree_diagram_mkosi.md  Readme_global_variables.md  Readme_resource_db_layout.md  Readme_resource_function_common.md  Readme_test_result.md  Readme_usage_mk_custom_iso_sh.md  Readme_variable_expansions.md  autoinstall-user-data  get_ipxe.sh  makefile  memo.txt  mk_shell.sh  opensuse.txt  work.txt
shell-script/: Readme.md  Readme_Memo_Color-mode.md  Readme_Memo_Common-functions.md  Readme_Memo_Creating_a_working_environment_chroot_version.md  Readme_Memo_VGA-mode.md  Readme_Server_Configuration.md  Readme_create_base_system.md  Readme_test_pxeboot_install.md  (+6 more)
source/my_lib/: 1st_readme.txt  Makefile.am  configure.ac  my_cdrom.c  my_common.h  my_file.c  my_string.c  t_cdrom.c
source/my_lib/chk/: Makefile.am  configure.ac  t_cdrom.c  t_cdrom_read_toc.c  t_copy.c
source/my_lib/lib/: Makefile.am  configure.ac  my_cdrom.c  my_common.h  my_file.c  my_string.c  my_time.c
(+1783 files in other folders)
