#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(my_lib_test, 1.0.0)
AC_CONFIG_SRCDIR(.)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(foreign)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_PROG_RANLIB

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
